--- a/src/components/List.css
+++ b/src/components/List.css
@@ -1,20 +1,3 @@
-/* .container {
-  width: 100%;
-
- 
-  background-color: rgb(33, 35, 40);
-  padding: 10px;
-} */
-
-/* .lista-tarefas {
-  width: 50%;
-  max-width: 540px;
-  background: rgb(50, 53, 60);
-  margin: 100px auto 20px;
-  padding: 40px 30px 70px;
-  border-radius: 10px;
-} */
-
 .lista-tarefas h2 {
   color: rgb(255, 255, 255);
   display: flex;
@@ -98,27 +81,29 @@ ul li span:hover {
 
 .card-component h2 {
   color: rgb(255, 255, 255);
-
 }
 
 .delete-card-button {
   position: absolute; /* Posição absoluta em relação ao pai (.card-component) */
-  top: 26%;
-  right: 26%;
-  /* background: #ff5c5c; */
+  top: 5%;
+  right: 10%;
   color: white;
   border: none;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  border-radius: 20px;
+  /* width: 45px;
+  height: 45px; */
   font-size: 20px;
-  line-height: 30px; /* Centraliza o 'X' verticalmente */
+  /* line-height: 30px;  */
   text-align: center;
   cursor: pointer;
-  font-weight: bold;
-  /* background-image: url(""); */
+  justify-content: center;
+  justify-items: center;
 }
 
 .delete-card-button:hover {
   background: #ff2e2e;
+}
+
+.title-input{
+  background-color: rgb(50, 53, 60);
 }
